Game Demo with Changes